--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Desenvolvedor Front End & UX/UI Designer localizado no Rio de Janeiro">
     <link rel="stylesheet" href="./css/style.css">
     <title>Lobo - Desenvolvedor e Designs</title>
 </head>
 <body>
     
     <header class="header">
-        <img class="logo" src="./img/marca.svg" alt="Logo">
+        <img class="logo" src="./img/marca.svg" alt="Logo" width="104" height="38">
 
         <nav>
             <ul class="header__menu">
@@ -21,7 +22,7 @@
     </header>
 
     <main class="introducao">
-        <img src="img/perfil.jpg" alt="Lobo cinza">
+        <img src="img/perfil.jpg" alt="Lobo cinza" width="360" height="520">
         <div>
             <h1>Desenvolvedor <br /> 
                 Front End & <br /> 
